@@ -89,9 +89,11 @@ public class SearchGroupShardResponseProcessor implements ShardResponseProcessor
             t = t.getCause();
           }
           nl.add("error", t.toString());
-          StringWriter trace = new StringWriter();
-          t.printStackTrace(new PrintWriter(trace));
-          nl.add("trace", trace.toString());
+          if (!rb.req.getCore().getCoreContainer().hideStackTrace()) {
+            StringWriter trace = new StringWriter();
+            t.printStackTrace(new PrintWriter(trace));
+            nl.add("trace", trace.toString());
+          }
         } else {
           nl.add("numFound", response.get("totalHitCount"));
         }
